# agent-coordinator

./: README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-11-agent-coordinator.md
docs/superpowers/specs/: 2026-06-11-agent-coordinator-design.md
src/agent_coordinator/: __init__.py  cli.py  models.py  service.py  store.py
tests/: test_cli.py  test_compaction.py  test_lease_fencing.py  test_service.py
